--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 html {
-    /* height: 100%; */
+    height: 100%;
 }
 body{
     background-size:cover;
     min-height: 100vh;
-    color: black;
 
 }
