--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -1,6 +1,9 @@
 .my-footer{
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 2.5rem; 
+    font-size:large;
+    color: #789;
+
 }
