--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -1,9 +1,8 @@
 .my-footer{
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 2.5rem; 
     font-size:large;
-    color: #789;
 
 }
