Changed portfolio layout

--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -1,33 +1,18 @@
-.left {
-    font-size: 4em;
-    /* align-self: center; */
+.typewrite {
+    font-size: 5em;
     padding: 20px;
     font-family: 'Anek Devanagari', sans-serif;
 
 }
-.left > h3 {
-    color: orange;
-}
 
-.right {
-    margin-top: 160px;
-    padding: 20px;
-    
-}
 .content {
-    display: flex;
-    background-image: url('../newyork2.jpg');
+    /* display: flex;
+    background-image: url('../cs_wallpaper.jpg');
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
     /* width:200px; */
     height: 100vh;
 
-}
-
-#profile-pic {
-    height: 300px;
-    width: 250px;
-    border-radius: 50%;
 }
 
 .bio{
@@ -40,25 +25,8 @@ p{
     font-family: 'Anek Devanagari', sans-serif;
 }
 
-.typewrite {
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid orange; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .10em; /* Adjust as needed */
-    animation: 
-      typing 3.5s steps(40, end),
-      blink-caret .75s step-end infinite;
-  }
-  
-  /* The typing effect */
-  @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }
-  
-  /* The typewriter cursor effect */
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: orange; }
-  }
+
+
+#frameworks{
+    padding: 25px;
+}
