--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,3 +1,9 @@
 /* i {
     font-size: large;
 } */
+
+#navbar{
+    padding: 10px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+}
